# django-autowired

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/backends/: dishka.md  injector.md  lagom.md  wireup.md
docs/guide/: container.md  extra_modules.md  injectable.md  inspect.md  scanning.md  scopes.md  testing.md
docs/integrations/: django.md  fastapi.md  flask.md
docs/reference/: api.md
examples/: README.md
examples/django_demo/: README.md  conftest.py  manage.py  pyproject.toml  pytest.ini
examples/django_demo/greetings/: apps.py  tests.py  urls.py  views.py
examples/django_demo/greetings/adapters/out_/services/: friendly_greeter.py
examples/django_demo/greetings/domain/ports/services/: greeter.py  name_formatter.py
examples/django_demo/project/: settings.py  urls.py  wsgi.py
examples/fastapi_demo/: README.md  conftest.py  main.py  pyproject.toml  tests.py
examples/fastapi_demo/greetings/: routes.py
examples/fastapi_demo/greetings/adapters/out_/services/: friendly_greeter.py
examples/fastapi_demo/greetings/domain/ports/services/: name_formatter.py
examples/flask_demo/: README.md  app.py  conftest.py  pyproject.toml  tests.py
examples/flask_demo/greetings/: routes.py
examples/flask_demo/greetings/adapters/out_/services/: title_case_name_formatter.py
examples/flask_demo/greetings/domain/ports/services/: greeter.py
src/django_autowired/: __init__.py  __main__.py  cli.py  container.py  exceptions.py  inspect.py  registry.py  scanner.py  scopes.py  testing.py
src/django_autowired/backends/: __init__.py  base.py  dishka_.py  injector_.py  lagom_.py  wireup_.py
src/django_autowired/integrations/django/: __init__.py  apps.py
src/django_autowired/integrations/fastapi/: __init__.py  lifespan.py
src/django_autowired/integrations/flask/: __init__.py  extension.py
tests/: conftest.py  test_cli.py  test_container.py  test_exceptions.py  test_inspect.py  test_registry.py  test_scanner.py  test_scopes.py  test_testing_utils.py
tests/backends/: test_dishka.py  test_injector.py  test_lagom.py  test_wireup.py
tests/integrations/: test_django.py  test_fastapi.py  test_flask.py
