[project]
name = "django-autowired-fastapi-demo"
version = "0.0.0"
description = "Demo FastAPI project showcasing django-autowired."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",  # for TestClient
    "uvicorn[standard]>=0.30",
    "django-autowired[fastapi,injector,testing] @ file:///${PROJECT_ROOT}/../..",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv.sources]
django-autowired = { path = "../..", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
markers = [
    "autowired_packages: packages to scan for the autowired_container fixture",
    "autowired_backend: backend name for the autowired_container fixture",
]
