[project]
name = "django-autowired-flask-demo"
version = "0.0.0"
description = "Demo Flask project showcasing django-autowired."
requires-python = ">=3.13"
dependencies = [
    "Flask>=3.0",
    "django-autowired[flask,injector,testing] @ file:///${PROJECT_ROOT}/../..",
    "pytest>=8.0",
]

[tool.uv.sources]
django-autowired = { path = "../..", editable = true }

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
markers = [
    "autowired_packages: packages to scan for the autowired_container fixture",
    "autowired_backend: backend name for the autowired_container fixture",
]
